# statshouse-rs

./: .editorconfig  Cargo.toml  test_template.txt
.github/workflows/: ci.yml
statshouse/: Cargo.toml
statshouse/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
