[package]
name = "statshouse"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[features]
_bench = [] # to be able to conditionally depend on unstable features

[dependencies]
